--- a/css/style.css
+++ b/css/style.css
@@ -2070,6 +2070,7 @@ footer {
                             color: white;
 
                             padding: 5px 10px;
+                            margin-bottom: 15px;
 
                         }
 
