--- a/paginas/redefinirSenha.phtml
+++ b/paginas/redefinirSenha.phtml
@@ -5,6 +5,8 @@
 
         <form id="form" action="login" method="post" class="form">
 
+        <input type="Email" name="email" class="required" oninput="" required id="email" placeholder="Confimer Seu Email" style="margin-bottom: 20px;">
+
         <input type="password" name="Number" class="required" oninput="mainPasswordValidateRedefinir()" required id="senha" placeholder="Nova Senha" >
                 <span class="span-required" style=" margin:5px 0 0 10px; display: none; color: red;">Deve ter pelo menos 8 digetos </span>
 
