--- a/paginas/detalheProduto.phtml
+++ b/paginas/detalheProduto.phtml
@@ -205,7 +205,7 @@ if ($produto_estoque > 0) {
         <div class="categoria">
             <h2>MAIS VENDIDOS</h2>
 
-            <a href="paginasProdutos/maisvendidosmeu ">
+            <a href="maisvendidos">
                 <p>Ver Todos</p>
             </a>
 
