--- a/paginas/home.phtml
+++ b/paginas/home.phtml
@@ -38,13 +38,13 @@ if ($dadosApi && is_array($dadosApi)) {
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="4000">
-            <a href=""><img src="imagens/banner/bannerBuds.jpg" class="d-block w-100" alt="..."></a>
+            <a href="detalheProduto/6"><img src="imagens/banner/bannerBuds.jpg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item" data-bs-interval="4000">
-            <a href=""> <img src="imagens/banner/banners24.jpg" class="d-block w-100" alt="..."></a>
+            <a href="detalheProduto/2"> <img src="imagens/banner/banners24.jpg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item" data-bs-interval="4000">
-            <a href=""><img src="imagens/banner/banner3.png" class="d-block w-100" alt="..."></a>
+        <a href="detalheProduto/1"><img src="imagens/banner/banner3.png" class="d-block w-100" alt="..."></a>
         </div>
     </div>
     <button id="botao_carrosel" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -147,14 +147,12 @@ if ($dadosApi && is_array($dadosApi)) {
     </div>
 
     <div class="banner" data-aos="fade" data-aos-duration="400">
-        <img src="imagens/banner/banner6.jpg" alt="" width="100%" style="margin: 30px 0;">
+        <a href="detalheProduto/2"><img src="imagens/banner/banner6.jpg" alt="" width="100%" style="margin: 30px 0;"></a>
     </div>
 
     <div class="conteiner_carrosel">
         <div class="categoria">
             <h2>EM PROMOÇÃO</h2>
-
-
         </div>
 
         <hr>
